updating booking.html template as theres issues with calandar on mobile/tablet view. resolving. Also added in js for dynamic dropdown. no testing complete on it. more styling to do"

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -151,7 +151,7 @@ form {
 
 .logout-button {
     border: 1px solid #f8d7da;  
-    background-color: transparent;  
+    background-color: transparent !important;  
     padding: 5px 10px;  
     border-radius: 4px;  
     color: rgba(255, 255, 255, .5);
@@ -162,22 +162,22 @@ form {
 }
 
 .logout-button:hover {
-    background-color: #f8d7da;
-    color: #ffffff;
+    background-color: #f8d7da !important;
+    color: #ffffff !important;
     border-color: #f5c6cb;
 }
 
 #logout-form .nav-link {
     font-size: 1.25rem !important;
     font-weight: normal;
-    color: #F1DBBF;
+    color: #F1DBBF !important;
     padding: 0 0.75rem !important;
     text-decoration: none;
     margin-top: 6.4px;
 }
 
 #logout-form .nav-link:hover {
-    color: #B99B6B;
+    color: #B99B6B !important;
     text-decoration: none;
 }
 
@@ -199,4 +199,23 @@ form {
 .fc-day:hover {
     border-color: #B99B6B !important;
     background-color: rgba(185, 155, 107, 0.2) !important;
+}
+
+.fc-day-sat, .fc-day-sun {
+    background-color: rgba(185, 155, 107, 0.1) !important; 
+}
+
+.fc-day-today {
+    background-color: rgba(255, 204, 0, 0.3) !important;
+    border: 2px solid #B99B6B important!;
+}
+
+.fc-day-number {
+    color: #000000 !important;
+}
+
+.fc-widget-header {
+    background-color: #698269 !important;
+    color: #F1DBBF !important;
+    border: 1px solid #B99B6B;
 }
